# machina-integration-lab

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Capabilities/: DivingCapability.cpp  DivingCapability.h  DrivingCapability.cpp  DrivingCapability.h  FlyingCapability.cpp  FlyingCapability.h  SailingCapability.cpp  SailingCapability.h
Engine/Core/: DeusExMachina.cpp  DeusExMachina.h  TravelContext.h
Engine/Interfaces/: IDivable.h  IDrivable.h  IFlyable.h  IPassenger.h  ISailable.h
Engine/Vehicles/: Vehicle.cpp  Vehicle.h
Engine/Vehicles/Interfaces/: IDivable.h  IDrivable.h  IFlyable.h  ISailable.h
Game/: main.cpp
Game/Vehicles/: Airplane.cpp  Airplane.h  Boat.cpp  Boat.h  Boatplane.cpp  Boatplane.h  Motorcycle.cpp  Motorcycle.h  Person.cpp  Person.h  Sedan.cpp  Sedan.h  Trailer.cpp  Trailer.h  UBoat.cpp  UBoat.h
IntegrationNotes/: v1_baseline.md  v1_to_v2_smart_pointers.md  v2_to_v3_ipassenger.md  v3_to_v4_composition.md
